--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,4 @@
-idf_component_register(SRCS "main.c" "leds.c"
-                       INCLUDE_DIRS ".")
+
+idf_component_register(SRCS "main.c"
+                       INCLUDE_DIRS "."
+                       REQUIRES "esp32-camera" "nvs_flash")
