--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,4 @@
 
-idf_component_register(SRCS "main.c" "leds.c" "wifi.c"
+idf_component_register(SRCS "main.c" "leds.c" "wifi.c" "server.c"
                        INCLUDE_DIRS "."
-                       REQUIRES "esp32-camera" "nvs_flash")
+                       REQUIRES "esp32-camera" "nvs_flash" "esp_eth" "esp_http_server")
