--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,5 @@
 
-idf_component_register(SRCS "main.c" "leds.c" "wifi.c" "server.c"
+idf_component_register(SRCS "main.c" "leds.c" "wifi.c" "asyncserver.c"
                        INCLUDE_DIRS "."
-                       REQUIRES "esp32-camera" "nvs_flash" "esp_eth" "esp_http_server")
+                       REQUIRES "esp32-camera" "nvs_flash" "esp_eth" "esp_http_server" "ESPAsyncWebServer" "arduino-esp32")
+                       add async web server components
